// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributionList renders some test data in the default state 1`] = `
<div>
  <h2>
    Contributions
  </h2>
  <label>
    Filter by contribution type:
     
    <select
      onChange={[Function]}
      value="null"
    >
      <option
        value="null"
      >
        Show all
      </option>
      <option
        disabled={true}
        key="sourcecred/example-plugin-a"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        sourcecred/example-plugin-a
      </option>
      <option
        key="big"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"type\\":\\"big\\"}"
      >
         big
      </option>
      <option
        key="small"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"type\\":\\"small\\"}"
      >
         small
      </option>
      <option
        disabled={true}
        key="sourcecred/example-plugin-b"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        sourcecred/example-plugin-b
      </option>
      <option
        key="very true"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-b\\",\\"type\\":\\"very true\\"}"
      >
         very true
      </option>
    </select>
  </label>
  <table>
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Artifact
        </th>
        <th>
          Weight
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"id\\":\\"one\\",\\"type\\":\\"small\\"}"
      >
        <td>
          the number 111
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"id\\":\\"two\\",\\"type\\":\\"small\\"}"
      >
        <td>
          the number 234
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"id\\":\\"three\\",\\"type\\":\\"big\\"}"
      >
        <td>
          the number 616
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-b\\",\\"id\\":\\"four\\",\\"type\\":\\"very true\\"}"
      >
        <td>
          TRUE!
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-c\\",\\"id\\":\\"five\\",\\"type\\":\\"ctype\\"}"
      >
        <td
          colSpan={3}
        >
          <i>
            unknown
          </i>
           (plugin: 
          sourcecred/example-plugin-c
          )
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ContributionList updates the node table when a filter is selected 1`] = `
<div>
  <h2>
    Contributions
  </h2>
  <label>
    Filter by contribution type:
     
    <select
      onChange={[Function]}
      value="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"type\\":\\"small\\"}"
    >
      <option
        value="null"
      >
        Show all
      </option>
      <option
        disabled={true}
        key="sourcecred/example-plugin-a"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        sourcecred/example-plugin-a
      </option>
      <option
        key="big"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"type\\":\\"big\\"}"
      >
         big
      </option>
      <option
        key="small"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"type\\":\\"small\\"}"
      >
         small
      </option>
      <option
        disabled={true}
        key="sourcecred/example-plugin-b"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        sourcecred/example-plugin-b
      </option>
      <option
        key="very true"
        value="{\\"pluginName\\":\\"sourcecred/example-plugin-b\\",\\"type\\":\\"very true\\"}"
      >
         very true
      </option>
    </select>
  </label>
  <table>
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Artifact
        </th>
        <th>
          Weight
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"id\\":\\"one\\",\\"type\\":\\"small\\"}"
      >
        <td>
          the number 111
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
      <tr
        key="{\\"pluginName\\":\\"sourcecred/example-plugin-a\\",\\"id\\":\\"two\\",\\"type\\":\\"small\\"}"
      >
        <td>
          the number 234
        </td>
        <td>
          [TODO]
        </td>
        <td>
          [TODO]
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
